# affinidi-trust-registry-rs

./: .deployments.yaml  .dockerignore  .env.example  .env.pipeline  .gitignore  CODEOWNERS  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DIDCOMM_PROTOCOLS.md  NOTICE.txt  README.md  SETUP_COMMAND_REFERENCES.md  audit.toml  d-build-tr.sh  deny.toml  docker-compose.test.yaml  docker-compose.yaml
.cargo/: config.toml
.github/actions/rust-dependencies/: action.yaml
.github/workflows/: checks.yaml  release.yaml
app/: Cargo.toml
app/src/: lib.rs
app/src/audit/: audit.rs  audit_logger.rs
app/src/configs/: did_document_loader.rs  mod.rs
app/src/domain/: mod.rs
app/src/storage/: factory.rs  mod.rs  repository.rs
app/src/storage/adapters/: csv_file_storage.rs  ddb_storage.rs  local_storage.rs  mod.rs
didcomm-server/: Cargo.toml  Dockerfile
didcomm-server/src/: lib.rs  main.rs  server.rs
didcomm-server/src/configs/: mod.rs
didcomm-server/src/didcomm/: mod.rs  problem_report.rs  transport.rs
didcomm-server/src/handlers/: build.rs  mod.rs
didcomm-server/src/handlers/admin/: messages.rs  mod.rs
didcomm-server/src/handlers/problem_report/: mod.rs
didcomm-server/src/handlers/trqp/: mod.rs
didcomm-server/src/listener/: build_listener.rs  listener.rs  mediator_functions.rs  mod.rs  start_listener.rs
didcomm-server/src/utils/: didcomm_helpers.rs  mod.rs  problem_report.rs
didcomm-server/tests/: data.csv  integration_test.rs  server_test.rs
docs/: TRQP_COMPLIANCE_ANALYSIS.md
http-server/: .dockerignore  Cargo.toml  Dockerfile
http-server/src/: error.rs  lib.rs  main.rs  server.rs
http-server/src/configs/: mod.rs
http-server/src/handlers/: mod.rs
http-server/src/handlers/trqp/: mod.rs
http-server/src/handlers/wellknown/: did_json.rs  profile_dids.rs
http-server/tests/: integration_test.rs
sample-data/: data.csv
test-client/: Cargo.toml
test-client/conf/: user_config.json
test-client/src/: admin_operations.rs  main.rs
test-client/src/common/: common.rs  didcomm.rs  mod.rs
test-client/src/receivers/: mod.rs  users_listener.rs
test-client/src/sender/: mod.rs  send_request.rs
test-client/src/service_configs/: mod.rs
testing/: .env.example  .env.test.example  README.md  run_tests.sh
testing-guide/: TESTING_GUIDE.md  comprehensive_test.sh
testing_scripts/: comprehensive_test.sh
trust-registry/: Cargo.toml  Dockerfile
trust-registry/src/: lib.rs  main.rs  server.rs
trust-registry/src/audit/: audit_logger.rs  mod.rs  model.rs
trust-registry/src/configs/: didcomm.rs  mod.rs  server.rs  storage.rs
trust-registry/src/configs/loaders/: aws_parameter_store.rs  aws_secrets.rs  environment.rs  file.rs  mod.rs  string.rs
trust-registry/src/didcomm/: did_document.rs  mod.rs  problem_report.rs  transport.rs
trust-registry/src/didcomm/handlers/: build.rs  mod.rs
trust-registry/src/didcomm/handlers/admin/: messages.rs  mod.rs
trust-registry/src/didcomm/handlers/problem_report/: mod.rs
trust-registry/src/didcomm/handlers/trqp/: mod.rs
trust-registry/src/didcomm/listener/: build_listener.rs  mediator_functions.rs  mod.rs  start_listener.rs
trust-registry/src/domain/: mod.rs
trust-registry/src/http/: mod.rs
trust-registry/src/http/handlers/: mod.rs
trust-registry/src/http/handlers/trqp/: mod.rs
trust-registry/src/http/handlers/wellknown/: did_json.rs  mod.rs  profile_dids.rs
trust-registry/src/storage/: factory.rs  repository.rs
trust-registry/src/storage/adapters/: csv_file_storage.rs  ddb_storage.rs  local_storage.rs  mod.rs  redis_storage.rs
trust-registry/tests/: didcomm_integration_test.rs  didcomm_server_test.rs  http_integration_test.rs  redis_integration_test.rs
