[workspace]
members = ["app", "didcomm-server", "http-server"]
resolver = "3"

[workspace.package]
version = '0.1.0'
edition = "2024"
publish = false
rust-version = "1.88.0"
description = "Trust Registry"
readme = "README.md"

[workspace.dependencies]

app = { path = "./app", version = "*" }

affinidi-tdk = "0.2.4"
anyhow = "1.0.71"
async-trait = "0.1.89"

chrono = "0.4"
dotenvy = "0.15.7"
thiserror = "2.0"
axum = "0.8.1"
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt", "env-filter"
] }
serde = "1.0.136"
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
once_cell = "1.20.2"
axum-server = { version = "0.7", default-features = true}
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.18", features = ["v4"]}