[workspace]
members = ["test-client", "trust-registry"]
resolver = "3"

[workspace.package]
version = '0.1.0'
edition = "2024"
publish = false
rust-version = "1.88.0"
description = "Trust Registry"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]


affinidi-tdk = "0.2.7"
anyhow = "1.0.71"
async-trait = "0.1.89"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
axum = "0.8.1"
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }
tempfile = "3.23"
serde = "1.0.136"
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
sha256 = "1.6"
once_cell = "1.20.2"
axum-server = { version = "0.7", default-features = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.18", features = ["v4"] }
aws-types = { version = "1.3" }
aws-config = { version = "1.5" }
aws-sdk-dynamodb = { version = "1.47" }
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
