[package]
name = "app"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true