[package]
name = "didcomm-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
app.workspace = true

affinidi-did-resolver-cache-sdk.workspace = true
did-peer.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-messaging-helpers.workspace = true
affinidi-messaging-sdk.workspace = true
affinidi-secrets-resolver.workspace = true
affinidi-tdk.workspace = true

async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

axum-server.workspace = true
tower-http.workspace = true