[package]
name = "didcomm-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
default-run = "didcomm-server"

[dependencies]
app.workspace = true

affinidi-tdk.workspace = true

async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
sha256.workspace = true

axum-server.workspace = true
tower-http.workspace = true

uuid.workspace = true
did-peer = { version = "0.7.5", optional = true }
affinidi-did-key = { version = "0.1.4", optional = true }

[dev-dependencies]
serial_test = "3.2.0"


[[bin]]
name = "didcomm-server"
path = "src/main.rs"

[[bin]]
name = "generate-secrets"
path = "bin/generate_secrets.rs"
required-features = ["dev-tools"]


[features]
default = []
dev-tools = ["did-peer", "affinidi-did-key"]
