[package]
name = "http-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
app.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

axum-server = { version = "0.7", default-features = true}
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }