[package]
name = "http-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
app.workspace = true
axum.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

axum-server.workspace = true
tower-http.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
