[package]
name = "trust-registry"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
affinidi-tdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
csv.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sha256.workspace = true
aws-types.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde_dynamo.workspace = true
uuid.workspace = true

did-peer = { version = "0.7.5", optional = true }
affinidi-did-key = { version = "0.1.4", optional = true }

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
serial_test.workspace = true
tower.workspace = true

[[bin]]
name = "trust-registry"
path = "src/main.rs"

[[bin]]
name = "generate-secrets"
path = "bin/generate_secrets.rs"
required-features = ["dev-tools"]

[features]
default = []
dev-tools = ["did-peer", "affinidi-did-key"]
